<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/tips"
        android:textSize="@dimen/text_big_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/iv_phone"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tips"
        android:layout_marginStart="@dimen/medium_size"
        android:layout_marginTop="@dimen/medium_size"
        android:src="@drawable/ic_baseline_phone_android_24"
        />

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iv_phone"
        app:layout_constraintTop_toTopOf="@id/iv_phone"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/medium_size"
        android:layout_marginEnd="@dimen/medium_size"
        android:hint="@string/phone_number"
        />

    <ImageView
        android:id="@+id/iv_password"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_phone"
        android:layout_marginStart="@dimen/medium_size"
        android:layout_marginTop="@dimen/medium_size"
        android:src="@drawable/ic_baseline_key_24"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iv_password"
        app:layout_constraintTop_toTopOf="@id/iv_password"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/medium_size"
        android:layout_marginEnd="@dimen/medium_size"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/medium_size"
        android:layout_marginEnd="@dimen/medium_size"
        android:layout_marginTop="@dimen/medium_size"
        android:background="@drawable/continue_btn"
        android:text="@string/continue_btn"
        android:textSize="@dimen/text_medium_size"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminateTint="@color/blue"
        />

</androidx.constraintlayout.widget.ConstraintLayout>