<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tips"
        android:textSize="@dimen/text_big_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_profile_surname"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="@dimen/medium_size"
        android:layout_marginTop="@dimen/medium_size"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tips" />

    <TextView
        android:id="@+id/tv_surname_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_size"
        android:layout_marginEnd="@dimen/medium_size"
        android:text="@string/surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_profile_surname"
        app:layout_constraintTop_toBottomOf="@id/tv_tips" />

    <TextView
        android:id="@+id/tv_surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_size"
        android:layout_marginEnd="@dimen/medium_size"
        android:background="@drawable/border_bottom_grey"
        android:textColor="@color/black"
        android:textSize="@dimen/text_medium_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_profile_surname"
        app:layout_constraintTop_toTopOf="@id/iv_profile_surname"
        tools:text="Doe" />


    <ImageView
        android:id="@+id/iv_profile_name"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="@dimen/medium_size"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name_title" />

    <TextView
        android:id="@+id/tv_name_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_size"
        android:layout_marginTop="@dimen/medium_size"
        android:layout_marginEnd="@dimen/medium_size"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_profile_name"
        app:layout_constraintTop_toBottomOf="@id/tv_surname" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_size"
        android:layout_marginEnd="@dimen/medium_size"
        android:background="@drawable/border_bottom_grey"
        android:textColor="@color/black"
        android:textSize="@dimen/text_medium_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_profile_name"
        app:layout_constraintTop_toBottomOf="@id/tv_name_title"
        tools:text="John" />


    <ImageView
        android:id="@+id/iv_phone"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="@dimen/medium_size"
        android:src="@drawable/ic_baseline_phone_android_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_number_title" />

    <TextView
        android:id="@+id/tv_phone_number_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_size"
        android:layout_marginTop="@dimen/medium_size"
        android:layout_marginEnd="@dimen/medium_size"
        android:text="@string/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_phone"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_size"
        android:layout_marginEnd="@dimen/medium_size"
        android:background="@drawable/border_bottom_grey"
        android:textColor="@color/black"
        android:textSize="@dimen/text_medium_size"
        app:layout_constraintStart_toEndOf="@id/iv_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_number_title"
        tools:text="+380" />

</androidx.constraintlayout.widget.ConstraintLayout>